Thu Jul 18 13:23:51 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* mgt.c (S_proc_handle_exceptions): Release newly created referenc
 	on E when we are done with it.

	* main.c (main): Don't wire proc anymore.  It's not necessary or
	useful. 

Thu Jul 18 04:15:49 1996  Roland McGrath  <roland@baalperazim.frob.com>

	* mgt.c (add_tasks): Fix vm_deallocate call to use mach_task_self ()
	instead of mach_host_self ().

Tue Jul 16 11:34:34 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* wait.c (EWOULDBLOCK): Define to work around new libc bug.

Sun Jul  7 21:04:03 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* mgt.c (S_proc_reauthenticate): Don't use unsafe MOVE_SEND in
 	user-side interruptible RPC.

Wed Jul  3 14:44:00 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* mgt.c (process_has_exited): When reparenting children to init,
 	if one of them is dead, alert init.

Fri Jun 28 11:54:21 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* proc.h (check_owner): Return true any time PROC1 has root.

Thu May 30 19:11:31 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pgrp.c (S_proc_getsidport): MAKE_SEND_ONCE -> MAKE_SEND.

Wed May 29 11:35:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* info.c (S_proc_getprocinfo): Get rid of temp hack for strnlen.

Fri May 24 15:50:14 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* info.c (S_proc_getprocinfo): Set PI->exitstatus and PI->sigcode.

	* mgt.c (process_has_exited): Don't call alert_parent if P->p_task
 	is null (which happens only if this is the stub process in
 	proc_reassign).  This because the parent is uninvolved in the
 	death of stubp.

Wed May 22 17:47:15 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* stubs.c (send_signal): Send sigcode in message.

	* msg.c (S_proc_setmsgport): Add OLDMSGPORT_TYPE param.

Tue May 14 22:50:49 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* proc.h (check_owner): New inline function.